tests/fixtures/invalid/int_bitxor_list.py
# Cannot bitwise XOR Int and List[int]
x: int = 1 ^ [1, 2, 3]
